--- a/tetris.html
+++ b/tetris.html
@@ -34,6 +34,7 @@
         </div>
         <button id="startBtn" class="start-btn">ゲーム開始</button>
         <button id="restartBtn" class="restart-btn" style="display:none;">再スタート</button>
+        <a href="index.html" class="back-btn" style="display:inline-block; margin-top:15px;">メニューに戻る</a>
     </div>
     <script src="tetris.js"></script>
 </body>
