--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
                 <h2>神経衰弱</h2>
                 <p>カードをめくって同じ絵柄を探そう！</p>
             </a>
+            
+            <a href="poker.html" class="game-card">
+                <div class="game-icon">🎰</div>
+                <h2>ポーカー</h2>
+                <p>5枚のカードで役を作ろう！</p>
+            </a>
         </div>
         
         <footer>
