--- a/poker.html
+++ b/poker.html
@@ -485,7 +485,7 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
             position: relative;
             transition: transform 0.3s ease;
-            animation: cardAppear 0.3s ease-out;
+            /* animation removed - only animate when explicitly adding animation classes */
         }
 
         @keyframes cardAppear {
