--- a/poker.html
+++ b/poker.html
@@ -506,15 +506,15 @@
         @keyframes cardDeal {
             0% {
                 opacity: 0;
-                transform: scale(0.2) translateY(-100px) rotate(-20deg);
+                transform: translate(var(--deal-from-x, 400px), var(--deal-from-y, -200px)) scale(0.5) rotate(-20deg);
             }
             60% {
                 opacity: 1;
-                transform: scale(1.1) translateY(5px) rotate(3deg);
+                transform: translate(0, 0) scale(1.1) rotate(3deg);
             }
             100% {
                 opacity: 1;
-                transform: scale(1) translateY(0) rotate(0deg);
+                transform: translate(0, 0) scale(1) rotate(0deg);
             }
         }
 
@@ -525,15 +525,15 @@
         @keyframes cardInitialDeal {
             0% {
                 opacity: 0;
-                transform: translateX(-200px) translateY(-200px) rotate(-180deg) scale(0.3);
+                transform: translate(var(--deal-from-x, 400px), var(--deal-from-y, -300px)) rotate(-180deg) scale(0.5);
             }
             70% {
                 opacity: 1;
-                transform: translateX(0) translateY(0) rotate(10deg) scale(1.1);
+                transform: translate(0, 0) rotate(10deg) scale(1.1);
             }
             100% {
                 opacity: 1;
-                transform: translateX(0) translateY(0) rotate(0deg) scale(1);
+                transform: translate(0, 0) rotate(0deg) scale(1);
             }
         }
 
@@ -644,7 +644,7 @@
         .blinds-info {
             position: absolute;
             top: 20px;
-            right: 20px;
+            left: 20px;
             background: rgba(0, 0, 0, 0.8);
             border: 2px solid #ff9800;
             border-radius: 10px;
@@ -660,6 +660,62 @@
         .blinds-label {
             color: #ffd700;
             font-weight: bold;
+        }
+
+        /* トランプの山と捨てカード */
+        .deck-area {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            display: flex;
+            gap: 15px;
+            align-items: flex-start;
+        }
+
+        .deck-stack {
+            position: relative;
+            width: 80px;
+            height: 110px;
+        }
+
+        .deck-card {
+            position: absolute;
+            width: 80px;
+            height: 110px;
+            background: repeating-linear-gradient(45deg, #1e3c72 0px, #1e3c72 10px, #2a5298 10px, #2a5298 20px);
+            border: 3px solid #4a6fa5;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+        }
+
+        .deck-card:nth-child(1) { top: 0; left: 0; }
+        .deck-card:nth-child(2) { top: 2px; left: 2px; }
+        .deck-card:nth-child(3) { top: 4px; left: 4px; }
+
+        .burn-cards {
+            display: flex;
+            gap: 5px;
+            opacity: 0.6;
+        }
+
+        .burn-card {
+            width: 60px;
+            height: 85px;
+            background: repeating-linear-gradient(45deg, #8b4513 0px, #8b4513 8px, #a0522d 8px, #a0522d 16px);
+            border: 2px solid #654321;
+            border-radius: 6px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+        }
+
+        .deck-label {
+            position: absolute;
+            bottom: -25px;
+            left: 50%;
+            transform: translateX(-50%);
+            color: white;
+            font-size: 0.8em;
+            font-weight: bold;
+            white-space: nowrap;
         }
 
         /* アクションパネル */
@@ -1137,6 +1193,22 @@
                 <div><span class="blinds-label">SB:</span> $<span id="sbAmount">100</span></div>
                 <div><span class="blinds-label">BB:</span> $<span id="bbAmount">200</span></div>
             </div>
+            <div class="deck-area">
+                <div style="position: relative;">
+                    <div class="deck-stack">
+                        <div class="deck-card"></div>
+                        <div class="deck-card"></div>
+                        <div class="deck-card"></div>
+                    </div>
+                    <div class="deck-label">デッキ</div>
+                </div>
+                <div style="position: relative;">
+                    <div class="burn-cards" id="burnCards">
+                        <!-- 捨てカードがここに表示される -->
+                    </div>
+                    <div class="deck-label">バーン</div>
+                </div>
+            </div>
             <div class="community-cards" id="communityCards"></div>
         </div>
 
@@ -1226,6 +1298,7 @@ let soundEnabled = true;
 let volume = 0.5;
 let justDealtCards = false; // カードが配られた直後かどうか
 let newCommunityCards = []; // 新しく追加されたコミュニティカード
+let burnCardCount = 0; // バーンカードの枚数
 
 // サウンド設定
 function toggleSound() {
@@ -1341,6 +1414,8 @@ function startNewRound() {
     pot = 0;
     currentBet = 0;
     gamePhase = 'preflop';
+    burnCardCount = 0;
+    updateBurnCards();
 
     players.forEach(player => {
         player.cards = [];
@@ -1875,7 +1950,10 @@ function nextPhase() {
 
     switch(gamePhase) {
         case 'preflop':
-            // フロップ
+            // フロップ（バーンカード1枚 + フロップ3枚）
+            deck.pop(); // バーンカード
+            burnCardCount++;
+            updateBurnCards();
             const flopCards = [deck.pop(), deck.pop(), deck.pop()];
             newCommunityCards = [0, 1, 2]; // 新しく追加されたカードのインデックス
             communityCards = flopCards;
@@ -1884,7 +1962,10 @@ function nextPhase() {
             playSound('card');
             break;
         case 'flop':
-            // ターン
+            // ターン（バーンカード1枚 + ターン1枚）
+            deck.pop(); // バーンカード
+            burnCardCount++;
+            updateBurnCards();
             newCommunityCards = [communityCards.length]; // 新しく追加されたカードのインデックス
             communityCards.push(deck.pop());
             gamePhase = 'turn';
@@ -1892,7 +1973,10 @@ function nextPhase() {
             playSound('card');
             break;
         case 'turn':
-            // リバー
+            // リバー（バーンカード1枚 + リバー1枚）
+            deck.pop(); // バーンカード
+            burnCardCount++;
+            updateBurnCards();
             newCommunityCards = [communityCards.length]; // 新しく追加されたカードのインデックス
             communityCards.push(deck.pop());
             gamePhase = 'river';
@@ -2209,6 +2293,18 @@ function toggleInfo() {
 
     log.classList.toggle('visible');
     ranking.classList.toggle('visible');
+}
+
+// バーンカード表示の更新
+function updateBurnCards() {
+    const burnCardsEl = document.getElementById('burnCards');
+    if (burnCardsEl) {
+        let html = '';
+        for (let i = 0; i < Math.min(burnCardCount, 3); i++) {
+            html += '<div class="burn-card"></div>';
+        }
+        burnCardsEl.innerHTML = html;
+    }
 }
 
 console.log('Texas Hold\'em Poker loaded successfully!');
