--- a/poker.html
+++ b/poker.html
@@ -710,6 +710,82 @@
         .deck-card:nth-child(2) { top: 1px; left: 1px; }
         .deck-card:nth-child(3) { top: 2px; left: 2px; }
 
+        /* フェーズアナウンスメント */
+        .phase-announcement {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 500;
+            pointer-events: none;
+            display: none;
+        }
+
+        .phase-announcement.show {
+            display: block;
+            animation: phaseIn 2s ease-out forwards;
+        }
+
+        .phase-text {
+            font-size: 4em;
+            font-weight: 900;
+            color: #ffd700;
+            text-shadow:
+                0 0 20px rgba(255, 215, 0, 0.8),
+                0 0 40px rgba(255, 215, 0, 0.4),
+                3px 3px 6px rgba(0, 0, 0, 0.8);
+            letter-spacing: 8px;
+            text-transform: uppercase;
+            white-space: nowrap;
+        }
+
+        .phase-sub {
+            font-size: 1.2em;
+            color: white;
+            text-align: center;
+            margin-top: 8px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+            letter-spacing: 4px;
+        }
+
+        .phase-announcement.showdown .phase-text {
+            font-size: 4.5em;
+            color: #ff4444;
+            text-shadow:
+                0 0 30px rgba(255, 68, 68, 0.8),
+                0 0 60px rgba(255, 68, 68, 0.4),
+                3px 3px 6px rgba(0, 0, 0, 0.8);
+            animation: showdownPulse 0.5s ease-in-out 3;
+        }
+
+        @keyframes phaseIn {
+            0% {
+                opacity: 0;
+                transform: translate(-50%, -50%) scale(3);
+            }
+            20% {
+                opacity: 1;
+                transform: translate(-50%, -50%) scale(1);
+            }
+            70% {
+                opacity: 1;
+                transform: translate(-50%, -50%) scale(1);
+            }
+            100% {
+                opacity: 0;
+                transform: translate(-50%, -50%) scale(0.8);
+            }
+        }
+
+        @keyframes showdownPulse {
+            0%, 100% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.15);
+            }
+        }
+
         /* アクションパネル */
         .action-panel {
             background: rgba(0, 0, 0, 0.8);
@@ -1196,6 +1272,7 @@
                 </div>
             </div>
             <div class="community-cards" id="communityCards"></div>
+            <div class="phase-announcement" id="phaseAnnouncement"></div>
         </div>
 
         <div class="action-panel" id="actionPanel">
@@ -2203,6 +2280,7 @@ function nextPhase() {
             communityCards = flopCards;
             gamePhase = 'flop';
             addLog('--- フロップ ---');
+            showPhaseAnnouncement('FLOP', 'コミュニティカード 3枚');
             playSound('card');
             break;
         case 'flop':
@@ -2211,6 +2289,7 @@ function nextPhase() {
             communityCards.push(deck.pop());
             gamePhase = 'turn';
             addLog('--- ターン ---');
+            showPhaseAnnouncement('TURN', '4枚目のカード');
             playSound('card');
             break;
         case 'turn':
@@ -2219,6 +2298,7 @@ function nextPhase() {
             communityCards.push(deck.pop());
             gamePhase = 'river';
             addLog('--- リバー ---');
+            showPhaseAnnouncement('RIVER', '最後のカード');
             playSound('card');
             break;
         case 'river':
@@ -2250,6 +2330,8 @@ function nextPhase() {
         return;
     }
 
+    updateDisplay();
+
     if (currentPlayerIndex !== 0) {
         setTimeout(() => cpuTurn(), DELAYS.CPU_TURN);
     }
@@ -2272,6 +2354,7 @@ function endRound() {
 // ショーダウン
 function showdown() {
     addLog('--- ショーダウン ---');
+    showPhaseAnnouncement('SHOWDOWN', '手札公開', true);
 
     const activePlayers = players.filter(p => p.isActive && !p.folded);
     const hands = activePlayers.map(p => ({
@@ -2389,6 +2472,26 @@ function backToMenu() {
     document.getElementById('resultOverlay').style.display = 'none';
     document.getElementById('gameScreen').style.display = 'none';
     document.getElementById('difficultyScreen').style.display = 'flex';
+}
+
+// フェーズアナウンスメント表示
+function showPhaseAnnouncement(phaseName, subText, isShowdown = false) {
+    const el = document.getElementById('phaseAnnouncement');
+    el.className = 'phase-announcement';
+    el.innerHTML = `
+        <div class="phase-text">${phaseName}</div>
+        ${subText ? `<div class="phase-sub">${subText}</div>` : ''}
+    `;
+    if (isShowdown) el.classList.add('showdown');
+
+    // アニメーション開始
+    void el.offsetWidth; // reflow強制
+    el.classList.add('show');
+
+    // アニメーション終了後にリセット
+    setTimeout(() => {
+        el.classList.remove('show', 'showdown');
+    }, 2000);
 }
 
 // ログ追加
