--- a/poker.html
+++ b/poker.html
@@ -1370,6 +1370,7 @@ let pot = 0;
 let currentBet = 0;
 let dealerPosition = 0;
 let currentPlayerIndex = 0;
+let lastRaiser = -1; // 最後にレイズ/ベットしたプレイヤー
 let gamePhase = 'preflop'; // preflop, flop, turn, river, showdown
 let soundEnabled = true;
 let volume = 0.5;
@@ -1849,6 +1850,7 @@ function collectBlinds() {
     pot += bbAmount;
 
     currentBet = BIG_BLIND;
+    lastRaiser = bbPlayer.id;
 
     addLog(`${sbPlayer.name} がスモールブラインド $${sbAmount} を支払いました`);
     addLog(`${bbPlayer.name} がビッグブラインド $${bbAmount} を支払いました`);
@@ -2054,6 +2056,7 @@ function playerAction(action) {
             player.bet = raiseAmount;
             pot += totalBet;
             currentBet = raiseAmount;
+            lastRaiser = 0;
             addLog(`${player.name} が $${raiseAmount} にレイズしました`);
             showActionIndicator(0, 'raise', raiseAmount);
             animateChipToPot(0, totalBet);
@@ -2065,7 +2068,10 @@ function playerAction(action) {
             player.chips = 0;
             player.bet += allInAmount;
             pot += allInAmount;
-            if (player.bet > currentBet) currentBet = player.bet;
+            if (player.bet > currentBet) {
+                currentBet = player.bet;
+                lastRaiser = 0;
+            }
             player.allIn = true;
             addLog(`${player.name} がオールイン！ $${allInAmount}`);
             showActionIndicator(0, 'allin', allInAmount);
@@ -2127,23 +2133,23 @@ function nextPlayer() {
 
     while (attempts < players.length) {
         if (players[nextIndex].isActive && !players[nextIndex].folded && !players[nextIndex].allIn) {
-            // 全員がベットを揃えていて、最初のプレイヤーに戻った場合
-            if (allBetsEqual && playersWhoCanAct.length === 1) {
-                nextPhase();
-                return;
-            }
-
-            // 全員がベットを揃えていて、一周した場合
             if (allBetsEqual) {
-                // ディーラーの次のプレイヤーまで戻ってきたらフェーズ終了
-                let firstToAct = (dealerPosition + 1) % players.length;
-                while (players[firstToAct].folded || !players[firstToAct].isActive || players[firstToAct].allIn) {
-                    firstToAct = (firstToAct + 1) % players.length;
-                }
-
-                if (nextIndex === firstToAct && currentPlayerIndex !== firstToAct) {
-                    nextPhase();
-                    return;
+                if (lastRaiser >= 0) {
+                    // レイズした人に戻ったらフェーズ終了
+                    if (nextIndex === lastRaiser) {
+                        nextPhase();
+                        return;
+                    }
+                } else {
+                    // 誰もレイズしていない場合、ディーラーの次に戻ったらフェーズ終了
+                    let firstToAct = (dealerPosition + 1) % players.length;
+                    while (players[firstToAct].folded || !players[firstToAct].isActive || players[firstToAct].allIn) {
+                        firstToAct = (firstToAct + 1) % players.length;
+                    }
+                    if (nextIndex === firstToAct) {
+                        nextPhase();
+                        return;
+                    }
                 }
             }
 
@@ -2205,16 +2211,21 @@ function decideCpuAction(cpu) {
     
     // ハンドが中程度
     if (hand.rank >= 4) {
-        if (callAmount <= cpu.chips * 0.1) {
+        if (callAmount <= cpu.chips * 0.3) {
+            return { type: 'call' };
+        } else if (Math.random() < 0.3) {
             return { type: 'call' };
         } else {
             return { type: 'fold' };
         }
     }
-    
+
     // ハンドが弱い
     if (callAmount === 0) {
         return { type: 'check' };
+    } else if (Math.random() < 0.3) {
+        // 30%の確率でコール
+        return { type: 'call' };
     } else {
         return { type: 'fold' };
     }
@@ -2250,6 +2261,7 @@ function executeCpuAction(cpu, action) {
             cpu.bet = raiseAmount;
             pot += totalBet;
             currentBet = raiseAmount;
+            lastRaiser = cpuIndex;
             addLog(`${cpu.name} が $${raiseAmount} にレイズしました`);
             showActionIndicator(cpuIndex, 'raise', raiseAmount);
             animateChipToPot(cpuIndex, totalBet);
@@ -2264,6 +2276,7 @@ function nextPhase() {
         p.bet = 0;
     });
     currentBet = 0;
+    lastRaiser = -1;
 
     // アクティブで未フォールドのプレイヤー数をチェック
     const activePlayers = players.filter(p => p.isActive && !p.folded);
